--- a/wp-content/themes/inside-theme/css/style.less
+++ b/wp-content/themes/inside-theme/css/style.less
@@ -762,6 +762,8 @@ textarea:focus:-ms-input-placeholder {
 .input {
     box-sizing: border-box;
     height: 50px;
+    display: block;
+    width: 100%;
     padding: 15px 12px;
     margin: 0 0 30px;
     .font-size(16, 16);
@@ -785,11 +787,11 @@ textarea:focus:-ms-input-placeholder {
         color: @white;
     }
 }
-.input-name {
+.wpcf7-form span.name {
     width: 47.37%;
     float: left;
 }
-.input-phone {
+.wpcf7-form span.phone {
     width: 47.37%;
     float: right;
 }
@@ -1308,6 +1310,7 @@ footer {
     .logo-mittel {
         position: absolute;
         display: inline-block;
+        z-index: 55;
         bottom: 22px;
         right: 180px;
         width: 42px;
@@ -1323,6 +1326,7 @@ footer {
     }
     .dienstle {
         position: absolute;
+        z-index: 55;
         display: inline-block;
         color: @slider-link-color;
         right: 24px;
@@ -1352,11 +1356,49 @@ footer {
         opacity: 1;
     }
 }
-
-
-
 /* END  competenzen page */
-
+.wpcf7-form-control-wrap {
+    display: block;
+}
+.wpcf7-form p br {
+    display: none;
+}
+span.wpcf7-not-valid-tip {
+    position: absolute;
+    bottom: 8px;
+    font-size: 0.85em;
+    color: @red-menu;
+}
+.wpcf7-form-control-wrap.email {
+    clear: both;
+    float: left;
+    width: 100%;
+}
+.wpcf7-form-control-wrap.message {
+    clear: both;
+    float: left;
+    width: 100%;
+}
+div.wpcf7-validation-errors {
+    position: absolute;
+    border: none;
+    color: @red-menu;
+    bottom: -25px;
+    padding: 0;
+}
+div.wpcf7-mail-sent-ok {
+    position: absolute;
+    border: none;
+    color: @white;
+    bottom: -25px;
+    padding: 0;
+}
+.contact-form div.wpcf {
+    margin-top: -14px !important;
+}
+#wpcf7-f149-o1 {
+    margin-top: -14px !important;
+}
 
 /****  media  ****/
 @media (max-width: 1280px) {
@@ -1553,6 +1595,9 @@ footer {
         float: none;
         width: 85%;
         margin: auto;
+    }
+    div.wpcf7-validation-errors {
+        bottom: -40px;
     }
     .btn-send {
         display: block;
@@ -1758,10 +1803,9 @@ footer {
     .input {
         margin: 0 0 40px;
     }
-    .input-name,
-    .input-phone {
+    .wpcf7-form span.name,
+    .wpcf7-form span.phone {
         width: 100%;
-        float: none;
     }
 }
 @media (max-width: 440px) {
