--- a/wp-content/themes/inside-theme/css/style.css
+++ b/wp-content/themes/inside-theme/css/style.css
@@ -389,12 +389,12 @@ h3 {
   margin: 35px 0 0;
 }
 .concept-block {
-  display: inline-block;
+  display: inline -block;
   width: 16%;
   box-sizing: border-box;
   float: left;
   vertical-align: top;
-  padding: 3px 8px 8px;
+  padding: 0 8px;
   font-weight: 300;
   color: #ffffff;
   -webkit-transition: all 0.4s ease;
@@ -432,10 +432,14 @@ h3 {
   transition: all 0.4s ease;
 }
 .concept-block .title {
+  padding: 3px 0 0;
   width: 140%;
   font-weight: 600;
   margin: 0 0 0.4em;
   text-transform: uppercase;
+}
+.concept-block .text {
+  padding: 0 0 8px;
 }
 .concept-block .text > p {
   margin: 0;
@@ -785,6 +789,7 @@ textarea:focus:-ms-input-placeholder {
   text-transform: uppercase;
   padding: 16px 48px;
   outline: none;
+  border-radius: 0;
   -webkit-transition: all 0.2s ease;
   -moz-transition: all 0.2s ease;
   -ms-transition: all 0.2s ease;
@@ -1441,6 +1446,33 @@ div.wpcf7-mail-sent-ok {
   .header-link {
     right: 15px;
   }
+  .kompetenzen-block .text-right {
+    line-height: 1.46;
+  }
+  .logo {
+    float: left;
+  }
+}
+@media (max-width: 1240px) {
+  .hidden-text {
+    margin-top: 14px;
+  }
+}
+@media (max-width: 1210px) {
+  .kompetenzen-block .text-right h3 {
+    font-size: 1.2em;
+  }
+  .kompetenzen-block .text-right {
+    line-height: 1.3;
+  }
+}
+@media (max-width: 1100px) {
+  .hidden-text {
+    margin-top: 10px;
+  }
+  .kompetenzen-block .text-right {
+    font-size: 0.75em;
+  }
 }
 @media (max-width: 1024px) {
   h1 {
@@ -1460,6 +1492,9 @@ div.wpcf7-mail-sent-ok {
   .crewman-block .photo-wrap img {
     width: 100%;
     height: auto;
+  }
+  .kompetenzen-block .text-right {
+    line-height: 1.2;
   }
 }
 @media (max-width: 960px) {
@@ -1500,6 +1535,41 @@ div.wpcf7-mail-sent-ok {
   }
   .kompetenzen-block .container {
     width: 82%;
+  }
+  .kompetenzen-block {
+    padding-top: 100px;
+  }
+  .kompetenzen-block .slider-left {
+    display: block;
+    width: 100%;
+    float: none;
+    margin: 0 0 95px;
+  }
+  .kompetenzen-block .text-right {
+    display: block;
+    float: none;
+    width: 100%;
+  }
+  .kompetenzen-block .back-to-main-link {
+    top: -66px;
+  }
+  .hidden {
+    padding-bottom: 15px;
+  }
+  .flex-direction-nav a {
+    top: auto;
+    bottom: -65px;
+  }
+  .kompetenzen-block .text-right h3 {
+    font-size: 1.5em;
+    margin: 1.6em 0 1.3em;
+  }
+  .kompetenzen-block .text-right {
+    line-height: 1.5;
+    font-size: 0.8125em;
+  }
+  .text-hidden-1 {
+    top: -31px;
   }
 }
 @media (max-width: 768px) {
@@ -1614,20 +1684,6 @@ div.wpcf7-mail-sent-ok {
   }
   .footer-block:nth-child(4) {
     margin-left: 0;
-  }
-  .kompetenzen-block .slider-left {
-    display: block;
-    width: 100%;
-    float: none;
-    margin: 0 0 20px;
-  }
-  .kompetenzen-block .text-right {
-    display: block;
-    float: none;
-    width: 100%;
-  }
-  .hidden {
-    padding-bottom: 15px;
   }
   .kompetenzen-block .container {
     width: 81.5%;
@@ -1868,16 +1924,16 @@ div.wpcf7-mail-sent-ok {
 }
 @media (max-width: 360px) {
   nav ul li {
-    margin-left: 7px;
+    margin-left: 5px;
   }
   nav ul li:first-child {
     margin: 0 0 14px;
   }
   nav ul li a {
-    font-size: 0.67em;
+    font-size: 11px;
   }
   .logo {
-    margin-top: 2px;
+    margin-top: 0;
   }
   .crewman-block .photo-wrap {
     margin: 0 0 20px;
@@ -1910,10 +1966,10 @@ div.wpcf7-mail-sent-ok {
   }
   .concept-block .line span {
     border-top-width: 15px;
-    border-left-width: 19px !important;
+    border-left-width: 22px !important;
     border-bottom-width: 15px;
     z-index: 1;
-    right: -22px;
+    right: -25px;
   }
   .concept-block .title {
     width: 100%;
@@ -1921,6 +1977,13 @@ div.wpcf7-mail-sent-ok {
   .concept-block:nth-child(5) {
     margin-top: 0;
     margin-left: 24%;
+  }
+  .concept-block:nth-child(5) .line {
+    width: 49% !important;
+    right: -49% !important;
+  }
+  .concept-block:nth-child(5) .line span {
+    right: -19px;
   }
 }
 @media (max-width: 330px) {
@@ -1935,6 +1998,16 @@ div.wpcf7-mail-sent-ok {
   }
   .concept-img .konzept-wrap img {
     width: 100%;
+  }
+}
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+  .concept-block {
+    min-height: 240px;
+  }
+}
+@media (min-width: 480px) and (max-width: 768px) and (orientation: portrait) {
+  .concept-block {
+    min-height: 240px;
   }
 }
 /*# sourceMappingURL=style.css.map */
