--- a/wp-content/themes/inside-theme/css/style.less
+++ b/wp-content/themes/inside-theme/css/style.less
@@ -454,12 +454,12 @@ h3 {
     margin: 35px 0 0;
 }
 .concept-block {
-    display: inline-block;
+    display: inline -block;
     width: 16%;
     box-sizing: border-box;
     float: left;
     vertical-align: top;
-    padding: 3px 8px 8px;
+    padding: 0 8px;
     font-weight: 300;
     color: @white;
     -webkit-transition: all @concept-hover-duration ease;
@@ -496,12 +496,14 @@ h3 {
     }
     .font-size(11,16);
     .title {
+        padding: 3px 0 0;
         width: 140%;
         font-weight: 600;
         margin: 0 0 0.4em;
         text-transform: uppercase;
     }
     .text {
+        padding: 0 0 8px;
         > p {
             margin: 0;
         }
@@ -864,6 +866,7 @@ textarea:focus:-ms-input-placeholder {
     text-transform: uppercase;
     padding: 16px 48px;
     outline: none;
+    border-radius: 0;
     -webkit-transition: all 0.2s ease;
     -moz-transition: all 0.2s ease;
     -ms-transition: all 0.2s ease;
@@ -1516,6 +1519,33 @@ div.wpcf7-mail-sent-ok {
     .header-link {
         right: 15px;
     }
+    .kompetenzen-block .text-right {
+        line-height: 1.46;
+    }
+    .logo {
+        float: left;
+    }
+}
+@media (max-width: 1240px) {
+    .hidden-text {
+        margin-top: 14px;
+    }
+}
+@media (max-width: 1210px) {
+    .kompetenzen-block .text-right h3 {
+        font-size: 1.2em;
+    }
+    .kompetenzen-block .text-right {
+        line-height: 1.3;
+    }
+}
+@media (max-width: 1100px) {
+    .hidden-text {
+        margin-top: 10px;
+    }
+    .kompetenzen-block .text-right {
+        font-size: 0.75em;
+    }
 }
 @media (max-width: 1024px) {
     h1 {
@@ -1544,6 +1574,9 @@ div.wpcf7-mail-sent-ok {
                 height: auto;
             }
         }
+    }
+    .kompetenzen-block .text-right {
+        line-height: 1.2;
     }
 }
 @media (max-width: 960px) {
@@ -1589,7 +1622,41 @@ div.wpcf7-mail-sent-ok {
     .kompetenzen-block .container {
         width: 82%;
     }
-
+    .kompetenzen-block {
+        padding-top: 100px;
+        .slider-left {
+            display: block;
+            width: 100%;
+            float: none;
+            margin: 0 0 95px;
+        }
+        .text-right {
+            display: block;
+            float: none;
+            width: 100%;
+        }
+        .back-to-main-link {
+            top: -66px;
+        }
+    }
+    .hidden {
+        padding-bottom: 15px;
+    }
+    .flex-direction-nav a {
+        top: auto;
+        bottom: -65px;
+    }
+    .kompetenzen-block .text-right h3 {
+        font-size: 1.5em;
+        margin: 1.6em 0 1.3em;
+    }
+    .kompetenzen-block .text-right {
+        line-height: 1.5;
+        font-size: 0.8125em;
+    }
+    .text-hidden-1 {
+        top: -31px;
+    }
 }
 @media (max-width: 768px) {
     header {
@@ -1721,22 +1788,6 @@ div.wpcf7-mail-sent-ok {
         }
     }
 
-    .kompetenzen-block {
-        .slider-left {
-            display: block;
-            width: 100%;
-            float: none;
-            margin: 0 0 20px;
-        }
-        .text-right {
-            display: block;
-            float: none;
-            width: 100%;
-        }
-    }
-    .hidden {
-        padding-bottom: 15px;
-    }
     .kompetenzen-block .container {
         width: 81.5%;
     }
@@ -2057,12 +2108,12 @@ div.wpcf7-mail-sent-ok {
     nav {
         ul {
             li {
-                margin-left: 7px;
+                margin-left: 5px;
                 &:first-child {
                     margin: 0 0 14px;
                 }
                 a {
-                    font-size: 0.67em;
+                    font-size: 11px;
                 }
                 //                &:first-child {
                 //                    float: none;
@@ -2096,7 +2147,7 @@ div.wpcf7-mail-sent-ok {
         }
     }
     .logo {
-        margin-top: 2px;
+        margin-top: 0;
     }
     .crewman-block {
         .photo-wrap {
@@ -2134,10 +2185,10 @@ div.wpcf7-mail-sent-ok {
         .line {
             span {
                 border-top-width: 15px;
-                border-left-width: 19px !important;
+                border-left-width: 22px !important;
                 border-bottom-width: 15px;
                 z-index: 1;
-                right: -22px;
+                right: -25px;
             }
         }
         .title {
@@ -2146,6 +2197,13 @@ div.wpcf7-mail-sent-ok {
         &:nth-child(5) {
             margin-top: 0;
             margin-left: 24%;
+        }
+    }
+    .concept-block:nth-child(5) .line {
+        width: 49% !important;
+        right: -49% !important;
+        span {
+            right: -19px;
         }
     }
 }
@@ -2163,5 +2221,16 @@ div.wpcf7-mail-sent-ok {
                 width: 100%;
             }
         }
+    }
+}
+
+@media (min-width: 768px) and  (max-width: 1024px) and (orientation: landscape) {
+    .concept-block {
+        min-height: 240px;
+    }
+}
+@media (min-width: 480px) and  (max-width: 768px) and (orientation: portrait) {
+    .concept-block {
+        min-height: 240px;
     }
 }
